fix header hover state border bottom spacing

--- a/src/App.css
+++ b/src/App.css
@@ -320,7 +320,7 @@ header li {
     padding-top: 1.2rem;
     padding-bottom: 1.25rem;
     cursor: pointer;
-    border-bottom: 3px solid transparent;
+    border-bottom: 4px solid transparent;
     font-weight: 500;
     color: hsl(219, 9%, 45%);
   }
